--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,14 +65,20 @@ ga('send', 'pageview');
 
                 {% if page.url == "/" %}
                 <li class="nav-item active">
+                    <a class="nav-link" href="{{ site.baseurl }}/index.html">Home</a>
+                </li>
                 {% else %}
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ site.baseurl }}/index.html">Home</a>
+                </li>
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/index.html">Home</a>
+                
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ site.baseurl }}/photos">Photos</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ site.baseurl }}/photos">Photos</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/carsetup">Car Setup</a>
                 </li>
 
                 <li class="nav-item">
