--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,6 +78,9 @@ ga('send', 'pageview');
                 </li>
 
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ site.baseurl }}/videos">Videos</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ site.baseurl }}/carsetup">Car Setup</a>
                 </li>
 
