--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 <!-- change your GA id in _config.yml -->
 
 <!-- Google tag (gtag.js)  GA4 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-R47BPLNZB6"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id={{site.google_analytics}}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
