--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,8 @@
 
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3356074518164779"
+     crossorigin="anonymous"></script>
 </head>
 
 
